--- a/lib/live_spat_web/live/page_live.html.leex
+++ b/lib/live_spat_web/live/page_live.html.leex
@@ -1,5 +1,26 @@
 <section class="phx-hero">
-  <svg phx-hook="MouseDown" width="250" height="250">
+  <svg class="t-canvas point"  phx-hook="MouseDownPoint" width="256" height="256">
     <circle cx="<%= @point.x %>" cy="<%= @point.y %>" r=6 stroke="<%= @color %>" fill="none" stroke-dasharray="3"/>
+  </svg>
+
+  <svg class="t-canvas traj" phx-hook="MouseDownTraj" width="256" height="256">
+    <defs>
+      <marker id="arrow" markerWidth="20" markerHeight="20" refX="0" refY="3" orient="auto" markerUnits="strokeWidth" viewBox="0 0 20 20">
+        <path d="M0,0 L0,6 L9,3 z" fill="None" stroke="#000"/>
+      </marker>
+    </defs>
+
+    <marker id="circle" markerWidth="8" markerHeight="8" refX="2" refY="2">
+        <circle cx="2" cy="2" r="2" stroke="#000" fill="#000"/>
+    </marker>
+
+    <marker id="cross" markerWidth="4" markerHeight="4" refX="2" refY="2">>
+      <path d="M 3,3 L 7,7 M 3,7 L 7,3" fill="none" stroke="rgba(0,0,0,0.5)" stroke-width="1"/>
+    </marker>
+
+    <polyline points="<%= @path %>"
+      stroke="#000" fill="none" stroke-dasharray="5 3"
+      marker-end="url(#arrow)" marker-start="url(#circle)" marker-mid="url(#cross)"
+    />
   </svg>
 </section>
