--- a/lib/live_spat_web/live/home_live.html.leex
+++ b/lib/live_spat_web/live/home_live.html.leex
@@ -1,4 +1,4 @@
 <section>
-  <input value="<%= @session_id %>" />
-  <a href="<%= Routes.editor_traj_path(@socket, :index, @session_id) %>" ><button>Ir a la session</button></a>
+  <input class="dash-border" value="<%= @session_id %>" />
+  <a  href="<%= Routes.editor_traj_path(@socket, :index, @session_id) %>" ><button class="dash-border">Ir a la session</button></a>
 </section>
